--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Singl Page Application</h1>
+    <h1>Single Page Application</h1>
     <script src="script.js"></script>
 </body>
 </html>
