--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
         <div id="content"></div>
     </div>
 
-
     <script src="/js/db.js"></script>
     <script src="/js/dom.js"></script>
+    <script src="/js/table.js"></script>
     <script src="/js/model.js"></script>
     <script src="/js/view.js"></script>
     <script src="/js/routing.js"></script>
     <script src="/js/core.js"></script>
-
-    <script src="/lessons/regexr.js"></script>
 </body>
 </html>
