--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li data-route="owners">Владельцы</li>
             <li data-route="brands">Бренды</li>
             <li data-route="models">Модели</li>
-            <li data-route="services">Усулги</li>
+            <li data-route="services">Услуги</li>
             <li data-route="cards">Объекты</li>
         </menu>
 
