--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-RU">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,9 +18,13 @@
             <li data-route="cards">Объекты</li>
         </menu>
 
+        <div id="form"></div>
         <div id="content"></div>
     </div>
 
+    <script src="/lang/mess.js"></script>
+
+    <script src="/js/loc.js"></script>
     <script src="/js/db.js"></script>
     <script src="/js/dom.js"></script>
     <script src="/js/table.js"></script>
